<resources>
    <string name="app_name">Weather for every day</string>
    <string name="degree">C</string>
    <string name="max_temp">max temp</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="min_temp">min temp</string>
    <string name="please_choose_your_city">Please choose your city</string>
    <string name="city">City</string>
    <string name="choose_city">Choose city</string>

    <!-- Format choose city -->
    <string name="ru">%1$s,ru</string>
</resources>