<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    >

    <TextView
        android:id="@+id/choose_city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_your_city"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choose_city_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"


        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/choose_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_city"/>




</LinearLayout>