<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_degree"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/tv_max_temp_title"
        app:layout_constraintStart_toStartOf="@+id/tv_max_temp_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_max_temp_title"
        tools:text="20" />

    <TextView
        android:id="@+id/tv_main_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_temp_margin_top"
        android:textSize="@dimen/text_size_main_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15" />

    <TextView
        android:id="@+id/tv_main_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:textSize="@dimen/degree_accent_temp"
        android:layout_marginStart="@dimen/degree_accent_margin_start"
        android:layout_marginTop="@dimen/degree_accent_margin_Top"
        app:layout_constraintStart_toEndOf="@+id/tv_main_temperature"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_min_temp_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:textSize="@dimen/degree_text_size"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_temp_title" />

    <TextView
        android:id="@+id/tv_max_temp_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/degree"
        android:textSize="@dimen/degree_text_size"
        app:layout_constraintStart_toEndOf="@+id/tv_max_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_max_temp_title" />

    <TextView
        android:id="@+id/tv_min_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/big_margin_top"
        android:text="@string/min_temp"
        app:layout_constraintEnd_toStartOf="@+id/tv_pressure_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_temperature" />

    <TextView
        android:id="@+id/tv_max_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/big_margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/max_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_humidity_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_temperature" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/tv_min_temp_title"
        app:layout_constraintStart_toStartOf="@+id/tv_min_temp_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_temp_title"
        tools:text="14" />

    <TextView
        android:id="@+id/tv_pressure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/big_margin_top"
        android:text="@string/pressure"
        app:layout_constraintEnd_toStartOf="@+id/tv_humidity_title"
        app:layout_constraintStart_toEndOf="@+id/tv_min_temp_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_temperature" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/tv_pressure_title"
        app:layout_constraintStart_toStartOf="@+id/tv_pressure_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure_title"
        tools:text="1023" />

    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/big_margin_top"
        android:text="@string/humidity"
        app:layout_constraintEnd_toStartOf="@+id/tv_max_temp_title"
        app:layout_constraintStart_toEndOf="@+id/tv_pressure_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_temperature" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/tv_humidity_title"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity_title"
        tools:text="1023" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ясно"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>